package ar.edu.utn.frba.dds.Bienes;

import java.util.List;

public class Categoria {
  private String nombre;
  private List<Subcategoria> subcategorias;

}
