package ar.edu.utn.frba.dds.donantes;

public enum TipoEntidadJuridica {
  ONG,
  EMPRESA,
  INSTITUCION,
  GUBERNAMENTAL
}
