package ar.edu.utn.frba.dds.necesidad;

import ar.edu.utn.frba.dds.Bienes.Donacion;

import java.util.ArrayList;
import java.util.List;

public class HistorialDonaciones {
  List<Donacion> historialDonaciones = new ArrayList<>();
}
