package ar.edu.utn.frba.dds.necesidad;

import ar.edu.utn.frba.dds.Bienes.Bien;
import ar.edu.utn.frba.dds.Bienes.Donacion;
import ar.edu.utn.frba.dds.Bienes.DonacionSegmentada;


import java.util.ArrayList;
import java.util.List;

public class Peticion {
  private String subclase;
  private int cantidad;
  private List<DonacionSegmentada> donacionesAsignadas = new ArrayList<>();


  public Peticion(String subclase, int cantidad) {
    this.subclase = subclase;
    this.cantidad = cantidad;
  }

  public String getSubclase() {
    return subclase;
  }

  public int getCantidad() {
    return cantidad;
  }

  public void setCantidad(int cantidad) {
    this.cantidad = cantidad;
  }

  public void agregarDonacionesAsignadas(List<DonacionSegmentada> donaciones) {
    this.donacionesAsignadas.addAll(donaciones);
  }

  public List<DonacionSegmentada> getDonacionesAsignadas() {
    return donacionesAsignadas;
  }
}
